--- a/Ages/Views/Home/Privacidade.cshtml
+++ b/Ages/Views/Home/Privacidade.cshtml
@@ -1,5 +1,4 @@
-﻿
-<link rel="stylesheet" href="~/css/Privacidade/index.css" />
+﻿<link rel="stylesheet" href="~/css/Privacidade/index.css" />
 @using System.Web
 
 @using (Html.BeginForm("Index", "Home", FormMethod.Get))
@@ -8,7 +7,7 @@
 {
     <button class="Btn">
         <svg height="1.2em" class="arrow" viewBox="0 0 512 512"><path d="M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z"></path></svg>
-      
+
     </button>
 }
 
@@ -16,37 +15,79 @@
 
 
 
-<div   class="container termos">
+<div class="container termos">
 
 
-    <h1 id="titulo-politica">Política de Privacidade </h1>
-    <p1 id="explicacao-politica">
+    <h1 class="titulo">Política de Privacidade </h1>
+    <p1 class="explicacao">
         •  A política em questão se fundamenta no respeito à sua privacidade (em relação a todas e quais queres informações que possam ser utilizadas durante sua participação como usuário no jogo).
-        Por conseguinte, elaboramos este documento de Política de 
+        Por conseguinte, elaboramos este documento de Política de
         Privacidade com o intuito de assegurar que você esteja plenamente ciente do tratamento de dados.
+
+        <span class="fw-bold">Caso discorde, recomendamos que você não jogue Ages. </span>
     </p1>
-    <h1 id="secao1-titulo">Seção 1 - Informações Gerais  </h1>
-    
-        <p1 id="explicaosecao1pt1">
-        • A presente Política de Privacidade contém informações sobre coleta, uso, armazenamento, tratamento e proteção dos dados pessoais
+
+
+    <h1 class="titulo">Seção 1 - Informações Gerais  </h1>
+
+    <p1 class="explicacao">
+        • A presente Política  contém informações sobre coleta, uso, armazenamento, tratamento e proteção dos dados pessoais
         dos usuários e visitantes do site ____ com a finalidade de demonstrar absoluta transparência quanto ao assunto e esclarecer a todos
         interessados sobre os tipos de dados que são coletados, os motivos da coleta e a forma como os usuários podem gerenciar ou excluir as suas informações pessoais.
-        </p1>
-    
-        
-        <p1 id="explicaosecao1pt2">
-
-        • Esta Política de Privacidade aplica-se a todos os usuários e visitantes do site ____ e integra os Termos e Condições Gerais de Uso do site ____. O presente documento foi elaborado em conformidade com a Lei Geral de Proteção de Dados Pessoais (Lei 13.709/18), o Marco Civil da Internet (Lei 12.965/14) (e o Regulamento da UE n. 2016/6790). Ainda, o documento poderá ser atualizado em decorrência de eventual atualização normativa, razão pela qual se convida o usuário a consultar periodicamente esta seção.
+        </br>    • Esta Política de Privacidade aplica-se a todos os usuários e visitantes do site ____ e integra os Termos e Condições Gerais de Uso do site ____. O presente documento foi elaborado em conformidade com a Lei Geral de Proteção de Dados Pessoais (Lei 13.709/18), o Marco Civil da Internet (Lei 12.965/14) (e o Regulamento da UE n. 2016/6790). Ainda, o documento poderá ser atualizado em decorrência de eventual atualização normativa, razão pela qual se convida o usuário a consultar periodicamente esta seção.
     </p1>
 
 
 
-    <h1 id="secao2-titulo">
-        Seção 2 – Coleta de Dados </h1>
+
+    </ul>
+    <style>
+        ul {
+            color: white; /* Definindo a cor do texto da lista como branca */
+            list-style-type: '- ';
+            line-height: 2;
+            margin-top: 10px;
+            margin-left: -20px;
+        }
+    </style>
+
+
+
+
+
+    <h1 class="titulo">
+        Seção 2 – Coleta de Dados
+    </h1>
+    <p1 class="explicacao">
+        •
+    </p1>
+
+    <h1 class="titulo">
+        Seção 3 – Uso dos Dados Coletados
+    </h1>
+
+    <p1 class="explicacao">
+
+
+    </p1>
+    <h1 class="titulo">
+        Seção 4 – Considerações
+    </h1>
+
+    <p1 class="explicacao">
+        • O conceito do Ages nasceu da fusão entre diversão, conhecimento e desafio, sendo esses três pilares fundamentais de nossa essência. Ao visitar nossa página, os jogadores não apenas encontram uma fonte de entretenimento, mas também um ambiente para testar suas habilidades, superar desafios e expandir seu conhecimento de maneira envolvente. Nosso compromisso é proporcionar uma experiência que garanta um ambiente seguro e inclusivo para todos os nossos jogadores.
+
+        <br /> • Como equipe, enfatizamos que todas as imagens do jogo têm caráter histórico e visam estimular o conhecimento e habilidades de raciocínio do jogador. Em nenhum momento tivemos como objetivo ofender qualquer cidadão.
+
+        <br /> • Se você tiver algum problema relacionado à utilização de nossa página, se sentir ofendido ou tiver alguma sugestão, sinta-se à vontade para nos enviar sua mensagem através do nosso e-mail: <span class="fw-bold">[insira o endereço de e-mail aqui] </span>.
+    </p1>
+
+
 
 </div>
 
 
 
 
-<div class="end-0 top-0 logo"></div>
+<div class="position-absolute top-0 end-0 logo">
+</div>
