--- a/Ages/Views/Home/Sobre.cshtml
+++ b/Ages/Views/Home/Sobre.cshtml
@@ -1,5 +1,4 @@
-﻿
-<link rel="stylesheet" href="~/css/Sobre/index.css" />
+﻿<link rel="stylesheet" href="~/css/Sobre/index.css" />
 
 
 @using (Html.BeginForm("Index", "Home", FormMethod.Get))
@@ -7,42 +6,43 @@
 {
     <button class="Btn">
         <svg height="1.2em" class="arrow" viewBox="0 0 512 512"><path d="M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z"></path></svg>
-      
+
     </button>
 }
 
 
 <div class="meio container">
 
-    
-        <div style="margin-right:30px">
-    <div>
-        <h1 class="titulo fs-3">Olá Jogador(a)!</h1>
-    </div>
-    <div class="texto container">
-        Estamos muito felizes em tê-lo conosco. Aqui, você terá a oportunidade de vivenciar momentos verdadeiramente especiais, 
-        explorando fotos incríveis que capturam a essência única do mundo da fotografia. Deixe-se envolver pela riqueza cultural
-        e pelas histórias fascinantes de lugares especiais. Além disso, prepare-se para desafiar sua mente e aprimorar sua percepção
-        ao buscar os detalhes e elementos únicos presentes em cada imagem. Estamos ansiosos para compartilhar essa jornada fotográfica emocionante com você!
-    </div>
-    <h1 class="titulo fs-3">Um Pouco Sobre Nossa História:</h1>
-    <div class="texto container">
-        Começamos a brincar com a ideia do nosso jogo lá em 2021, durante os tempos de escola. Enquanto estávamos juntos, costumávamos tentar adivinhar os locais e datas de fotos nos nossos celulares (só pelo desafio mesmo). A diversão foi tão grande que decidimos transformar isso em algo mais... 
-        
 
-    </div>
 
-    <div class="texto container">
-        Então, no final de 2023, decidimos levar a ideia para o mundo virtual e começamos a desenvolver o nosso jogo. Nossos amigos curtiram
-        a proposta, e agora, estamos ansiosos para compartilhar isso com vocês. Esperamos que também achem legal e que curtam a simplicidade
-        e a diversão por trás do nosso projeto. 
-    </div>
+    <div class="texto-todo ">
+        <div style="width: fit-content">
+            <div>
+                <h1 class="titulo fs-3">Olá Jogador(a)!</h1>
+            </div>
+            <div class="texto container">
+                Estamos muito felizes em tê-lo conosco. Aqui, você terá a oportunidade de vivenciar momentos verdadeiramente especiais,
+                explorando fotos incríveis que capturam a essência única do mundo da fotografia. Deixe-se envolver pela riqueza cultural
+                e pelas histórias fascinantes de lugares especiais. Além disso, prepare-se para desafiar sua mente e aprimorar sua percepção
+                ao buscar os detalhes e elementos únicos presentes em cada imagem. Estamos ansiosos para compartilhar essa jornada fotográfica emocionante com você!
+            </div>
+            <h1 class="titulo fs-3">Um Pouco Sobre Nossa História:</h1>
+            <div class="texto container">
+                Começamos a brincar com a ideia do nosso jogo lá em 2021, durante os tempos de escola. Enquanto estávamos juntos, costumávamos tentar adivinhar os locais e datas de fotos nos nossos celulares (só pelo desafio mesmo). A diversão foi tão grande que decidimos transformar isso em algo mais...
+
+
+            </div>
+
+            <div class="texto container">
+                Então, no final de 2023, decidimos levar a ideia para o mundo virtual e começamos a desenvolver o nosso jogo. Nossos amigos curtiram
+                a proposta, e agora, estamos ansiosos para compartilhar isso com vocês. Esperamos que também achem legal e que curtam a simplicidade
+                e a diversão por trás do nosso projeto.
+            </div>
+        </div>
     </div>
     <div class="logo">
-       
     </div>
 
 
 
 </div>
-
