--- a/Ages/Views/Home/Termos.cshtml
+++ b/Ages/Views/Home/Termos.cshtml
@@ -1,5 +1,4 @@
-﻿
-<link rel="stylesheet" href="~/css/Privacidade/index.css" />
+﻿<link rel="stylesheet" href="~/css/Termos/index.css" />
 @using System.Web
 
 @using (Html.BeginForm("Index", "Home", FormMethod.Get))
@@ -19,34 +18,34 @@
 <div class="container termos">
 
 
-    <h1 id="titulo-politica">Termos de Uso e Condições </h1>
-    <p1 id="explicacao-politica">
+    <h1 class="titulo">Termos de Uso e Condições </h1>
+    <p1 class="explicacao">
         •  Acessando o Ages, você, enquanto usuário, concorda em seguir rigorosamente os termos de serviços estabelecidos, bem como todas as leis e regulamentos pertinentes. Além disso, reconhece e assume a responsabilidade integral pelo cumprimento
         destas disposições.<br />
         • O Ages é destinado para usuários com 13 anos ou mais. Acessando o site do jogo Ages, você - enquanto usuário - confirma possuir a idade mínima de 13 anos.
         Caso não cumpra essa regra, você estará violando os "Termos de Uso" e será proibido de usufruir de nossos sistemas. Sendo assim, não somos responsáveis por qualquer
         perda ou dano que você possa passar ao ignorar o termo em questão. <br />
-     
+
         <span class="fw-bold">Caso discorde, recomendamos que você não jogue Ages. </span>
     </p1>
-  
 
-    <h1 id="secao1-titulo">Seção 1 - Direitos de Uso  </h1>
 
-    <p1 id="explicaosecao1pt1">
+    <h1 class="titulo">Seção 1 - Direitos de Uso  </h1>
+
+    <p1 class="explicacao">
         • É autorizado baixar temporariamente uma cópia dos conteúdos do jogo Ages exclusivamente para visualização pessoal (não comercial). No que diz respeito aos termos de lei aplicável, há uma concessão de licença e não uma tranferência de título, sendo que, submetido a licença, <span class="fw-bold"> você não tem permissão para:</span>
 
     </p1>
 
-  
+
 
     <ul>
         <li>Procurar realizar engenharia reversa ou descompilação em qualquer software presente no site  Ages;</li>
         <li>
-            Ir contra o bom uso dos materiais de direito autoral do site Ages a partir da tranferência de materiais para qualquer outra pessoa ou espalhamento do material em outro servidor fora de nosso domínio. 
-             Uma vez feito isso, você - enquanto usuário - está sujeito ao banimento do site Ages.
+            Ir contra o bom uso dos materiais de direito autoral do site Ages a partir da tranferência de materiais para qualquer outra pessoa ou espalhamento do material em outro servidor fora de nosso domínio.
+            Uma vez feito isso, você - enquanto usuário - está sujeito ao banimento do site Ages.
         </li>
-      
+
     </ul>
     <style>
         ul {
@@ -54,19 +53,39 @@
             list-style-type: '- ';
             line-height: 2;
             margin-top: 10px;
-           margin-left: -20px;
+            margin-left: -20px;
         }
     </style>
 
-    
 
-    
-    
-    <h1 id="secao2-titulo">
+
+
+
+    <h1 class="titulo">
         Seção 2 – Aplicação do Direito
     </h1>
-    <p1 id="explicaosecao1pt1">
+    <p1 class="explicacao">
         • Tanto os "Termos de Uso" quanto as "Políticas de Privacidade" são condições regidas conforme as leis do Brasil e você - enquanto usuário - se submete obrigatóriamente à jurisdição única dos órgãos competentes conforme a lei local.
+    </p1>
+
+    <h1 class="titulo">
+        Seção 3 – Anúncios de Terceiros
+    </h1>
+
+    <p1 class="explicacao">
+        • Ao clicar em algum  anúncio disponibilizado no site Ages, você estará sob os direitos de empresas externas responsáveis por estes. Logo, não temos o direito de controlar as ações e objetivos dessas empresas, bem como, o conteúdo de seus sites. Caso ache necessário, informe-nos sobre algum anúncio que considere ofensivo ou de carácter duvidoso e inapropriado a partir do nosso email <span class="fw-bold">[insira o endereço de e-mail aqui]</span>. Após análise, caso acharmos que esse anúncio viole nossos padrões de conduta e publicidade, tomaremos as devidas medidas.
+        <br />• Já que não temos o direito de controle dos anúncios externos, <span class="fw-bold">não nos responsabilizamos por qualquer dano ou perda que você venha a sofrer com o resultado da visualização ou clique de tais anúncios.</span> Caso deseje, recomendamos que o possível dano seja dirigido contra a empresa externa que se responsabiliza pelo
+    </p1>
+    <h1 class="titulo">
+        Seção 4 – Considerações
+    </h1>
+
+    <p1 class="explicacao">
+        • O conceito do Ages nasceu da fusão entre diversão, conhecimento e desafio, sendo esses três pilares fundamentais de nossa essência. Ao visitar nossa página, os jogadores não apenas encontram uma fonte de entretenimento, mas também um ambiente para testar suas habilidades, superar desafios e expandir seu conhecimento de maneira envolvente. Nosso compromisso é proporcionar uma experiência que garanta um ambiente seguro e inclusivo para todos os nossos jogadores.
+
+        <br /> • Como equipe, enfatizamos que todas as imagens do jogo têm caráter histórico e visam estimular o conhecimento e habilidades de raciocínio do jogador. Em nenhum momento tivemos como objetivo ofender qualquer cidadão.
+
+        <br /> • Se você tiver algum problema relacionado à utilização de nossa página, se sentir ofendido ou tiver alguma sugestão, sinta-se à vontade para nos enviar sua mensagem através do nosso e-mail: <span class="fw-bold">[insira o endereço de e-mail aqui] </span>.
     </p1>
 
 
@@ -76,4 +95,5 @@
 
 
 
-<div class="end-0 top-0 logo"></div>
+<div class="position-absolute top-0 end-0 logo">
+</div>
