--- a/Ages/wwwroot/css/Sobre/index.css
+++ b/Ages/wwwroot/css/Sobre/index.css
@@ -18,38 +18,22 @@ body {
     transform: rotate(-90deg) scale(1, 1);
     margin-top: 20px;
     margin-left: 20px;
-    box-shadow:  0 0 0 2px rgb(12,29,135);
+    box-shadow: 0 0 0 2px rgb(12,29,135);
     z-index: 999;
 }
 
 .arrow path {
     fill: white;
-    
 }
 
-.text {
-    font-size: 0.7em;
-    width: 100px;
-    position: absolute;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    bottom: -18px;
-    opacity: 0;
-    transition-duration: .7s;
-    transform: rotate(90deg);
-
-    
-    
-    
+.texto {
 }
+
 
 
 .Btn:hover .text {
     opacity: 1;
     transition-duration: .7s;
-   
 }
 
 .Btn:hover .arrow {
@@ -72,19 +56,19 @@ body {
     box-shadow: 0 0 20px 20px rgba(0, 0, 0, 0.3), inset -100px -100px 100px 0 #00000086;
     box-shadow: 0 0 0 2px rgb(197, 49, 149), 0 0 0 6px rgb(12,29,135);
     background-color: white;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position: relative;
     border-radius: 50px;
     font-family: 'Righteous', sans-serif;
-    padding-right: 40px;
+    max-width: 1150px; /* Mantém o máximo de 750px */
+    width: 90%; /* Ajusta a largura para 90% */
 }
 
 
+
+
 .titulo {
-    margin-left: 30px;
-    margin-top: 25px;
+    margin: 20px;
+    margin-top: 0px;
     user-select: none;
     pointer-events: none;
     font-size: 25px;
@@ -92,13 +76,10 @@ body {
 
 .texto {
     text-align: justify;
-    margin-left: 32px;
-    margin-right: 35px;
-    margin-top: 20px;
+    width: fit-content;
     user-select: none;
     pointer-events: none;
     font-size: 20px;
-    
 }
 
 .logo {
@@ -109,5 +90,10 @@ body {
     background-size: 100%;
     height: 250px;
     background-repeat: no-repeat;
+}
 
+@media (max-width: 570px) {
+    .meio {
+        width: 95%; /* Ajusta a largura para 95% em telas menores */
+    }
 }
